[tool.poetry]
name = "zecontinha"
version = "0.1.2"
description = ""
authors = ["Vido <vidov8@gmail.com>"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "3.9.22"
pandas = "2.2.3"
yfinance = "0.2.65"
dj-database-url = "2.1.0"
gunicorn = "23.0.0"
python-telegram-bot = "13.15"
python-binance = "1.0.17"
matplotlib = "3.9.4"
psycopg2 = "2.9.10"
psycopg-binary = "3.2.9"
statsmodels = "0.14.5"
hurst="0.0.5"
whitenoise = "4.1.4"
python-decouple = "3.8"
django = "3.2.25"
